--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "scripts": {
     "start": "node index.js"
   },
+  "repository": {
+  "type": "git",
+  "url": "git+https://github.com/Martturi/cv_master.git"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "2.5.6",
