--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "2.5.6",
-    "express": "4.15.2"
+    "express": "4.15.2",
+    "pg": "7.4.0"
   },
   "license": "MIT"
 }
