--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^4.0.0",
     "ejs": "2.5.6",
     "express": "4.15.2",
-    "pg": "7.4.0"
+    "pg": "7.4.0",
+    "promise": "^8.0.1"
   },
   "license": "MIT",
   "devDependencies": {
