--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git+https://github.com/Martturi/cv_master.git"
   },
+  "scripts": {
+    "lint": "./node_modules/.bin/eslint **/*.js"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
