--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "extends": "airbnb",
     "rules": {
-        "semi": ["error", "never"]
+        "semi": ["error", "never"],
+        "no-console": ["error", { "allow": ["warn", "error", "log"] }]
     }
 }
