Basic react app with opening and editing.
First react app, nothing works.

Edited eslint to add new file types

React file structure. Builds in heroku.

Updates cv from Database. Also fixes to esLint and dependencies.

Run locally with "npm run watch", which runs both the server and client.
Use at localhost:3000.

Saves to database with hardcoded uid.

Search bar and open-button works.

Displays a save succeeded message for 3 seconds after success.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
-    "extends": "airbnb",
-    "rules": {
-        "semi": ["error", "never"],
-        "no-console": ["error", { "allow": ["warn", "error", "log"] }]
-    }
+   "extends": "react-app",
+   "rules": {
+       "semi": ["error", "never"],
+       "no-console": ["error", { "allow": ["warn", "error", "log"] }],
+       "jsx-a11y/href-no-hash": false,
+       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+   },
+   "globals": {
+       "document": true
+   }
 }
