Updates cv from Database. Also fixes to esLint and dependencies.
Run locally with "npm run watch", which runs both the server and client.
Use at localhost:3000.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
-   "extends": "airbnb",
+   "extends": "react-app",
    "rules": {
        "semi": ["error", "never"],
        "no-console": ["error", { "allow": ["warn", "error", "log"] }],
+       "jsx-a11y/href-no-hash": false,
        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
    },
    "globals": {
