--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "main": "src/index.js",
   "scripts": {
     "react": "cd react/ && npm start",
-    "install_all": "npm install && cd react/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
-    "watch": "npm run install_all && nodemon server",
+    "react_build": "cd react/ && npm run build",
+    "install_all": "npm install && cd react/ && npm install && npm install --no-shrinkwrap",
+    "watch": "concurrently -n \"React,Server\" -c \"bgBlue.bold,bgMagenta.bold\" \"npm run react\" \"nodemon server\"",
     "lint": "./node_modules/.bin/eslint **/*.js",
     "heroku-postbuild": "cd react/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "concurrently": "^3.5.1",
     "dotenv": "^4.0.0",
     "ejs": "2.5.6",
     "express": "4.15.2",
@@ -30,11 +32,11 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
-    "eslint": "^4.12.0",
+    "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-ejs": "0.0.2",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.5"
