--- a/react/package.json
+++ b/react/package.json
@@ -5,6 +5,7 @@
     "node": "8.9.1"
   },
   "main": "src/index.js",
+  "proxy": "http://localhost:5000/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -17,7 +18,8 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "whatwg-fetch": "^2.0.3"
   },
   "license": "MIT",
   "devDependencies": {
