Fixed deploy error with process enviroment variables and esLint errors.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "cv_master",
   "scripts": {
+     "postdeploy": "psql $DATABASE_URL -f SQL_table_creation.sql"
   },
   "env": {
   },
