--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "react": "cd react/ && npm start",
     "react_build": "cd react/ && npm run build",
-    "install_all": "npm install && cd react/ && npm install && npm install --no-shrinkwrap",
+    "install_all": "npm install && cd react/ && npm install",
     "watch": "concurrently -n \"React,Server\" -c \"bgBlue.bold,bgMagenta.bold\" \"npm run react\" \"nodemon server\"",
     "lint": "./node_modules/.bin/eslint **/*.js",
     "heroku-postbuild": "cd react/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
@@ -24,21 +24,18 @@
     "ejs": "2.5.6",
     "express": "4.15.2",
     "pg": "7.4.0",
-    "promise": "^8.0.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "promise": "^8.0.1"
   },
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "nodemon": "^1.12.5",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-ejs": "0.0.2",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.5.1",
-    "mocha": "^4.0.1",
-    "nodemon": "^1.12.5"
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1"
   }
 }
