--- a/react/package.json
+++ b/react/package.json
@@ -23,10 +23,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-ejs": "0.0.2",
+    "eslint": "^4.14.0",
+    "eslint-plugin-flowtype": "^2.40.1",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.5.1"
   }
 }
