--- a/react/package.json
+++ b/react/package.json
@@ -19,7 +19,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "markdown": "^0.5.0"
   },
   "license": "MIT",
   "devDependencies": {
