--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,11 @@
 {
-   "extends": "react-app",
+   "extends": ["react-app", "airbnb"],
    "rules": {
        "semi": ["error", "never"],
        "no-console": ["error", { "allow": ["warn", "error", "log"] }],
        "jsx-a11y/href-no-hash": false,
-       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+       "react/prop-types": 0
    },
    "globals": {
        "document": true
