--- a/react/package.json
+++ b/react/package.json
@@ -23,10 +23,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^4.14.0",
-    "eslint-plugin-flowtype": "^2.40.1",
+    "eslint": "^4.11.1",
+    "eslint-plugin-ejs": "0.0.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-flowtype": "^2.34.1"
   }
 }
