--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0-beta.3",
     "concurrently": "^3.5.1",
     "dotenv": "^4.0.0",
     "ejs": "2.5.6",
