--- a/react/package.json
+++ b/react/package.json
@@ -16,11 +16,15 @@
     "url": "git+https://github.com/Martturi/cv_master.git"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.3",
+    "markdown": "^0.5.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
-    "whatwg-fetch": "^2.0.3",
-    "markdown": "^0.5.0"
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^5.0.0-alpha.4",
+    "whatwg-fetch": "^2.0.3"
   },
   "license": "MIT",
   "devDependencies": {
