Added local rest-api tests.
Tests basic get and post to the server.

Added first local test. Added script to initialise database aswell.

Added a function to clear database and WIP database-test.

Tests posting and getting from rest-api are now done.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
        "semi": ["error", "never"],
        "no-console": ["error", { "allow": ["warn", "error", "log"] }],
        "jsx-a11y/href-no-hash": false,
+       "arrow-body-style": [0],
        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
        "react/prop-types": 0
    },
