--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "scripts": {
     "react": "cd react/ && npm start",
     "react_build": "cd react/ && npm run build",
-    "install_all": "npm install && cd react/ && npm install",
+    "install": "cd react/ && npm install",
     "watch": "concurrently -n \"React,Server\" -c \"bgBlue.bold,bgMagenta.bold\" \"npm run react\" \"nodemon server\"",
-    "lint": "./node_modules/.bin/eslint **/*.js && ./node_modules/.bin/eslint react/src/**/*.js",
-    "heroku-postbuild": "cd react/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "lint": "./node_modules/.bin/eslint server/**/*.js && ./node_modules/.bin/eslint react/src/**/*.js",
+    "heroku-postbuild": "cd react/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "test": "mocha server/test/ --timeout 10000 && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "eslint": "^4.11.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-ejs": "0.0.2",
@@ -39,7 +41,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "nodemon": "^1.12.5"
   }
 }
