--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^4.0.0",
     "ejs": "2.5.6",
     "express": "4.15.2",
+    "html-pdf": "^2.2.0",
+    "markdown": "^0.5.0",
     "pg": "7.4.0",
     "promise": "^8.0.1",
     "react": "^16.2.0",
