--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "promise": "^8.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.0.17"
   },
   "license": "MIT",
