--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "promise": "^8.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "react-scripts": "1.0.17"
   },
   "license": "MIT",
   "devDependencies": {
