--- a/react/package.json
+++ b/react/package.json
@@ -21,9 +21,11 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.0.17",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
+    "redux": "^3.7.2",
     "whatwg-fetch": "^2.0.3"
   },
   "license": "MIT",
