WIP Use React Router to support URL navigation

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "promise": "^8.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.17"
   },
   "license": "MIT",
