--- a/react/package.json
+++ b/react/package.json
@@ -22,6 +22,8 @@
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "4.2.2",
+    "react-router-redux": "4.0.8",
     "react-scripts": "1.0.17",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
