--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "2.5.6",
     "express": "4.15.2",
     "express-session": "^1.15.6",
+    "history": "^4.7.2",
     "html-pdf": "^2.2.0",
     "markdown": "^0.5.0",
     "pg": "7.4.0",
