--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
     "jquery": "^3.3.1",
+    "history": "4.7.2",
     "markdown": "^0.5.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
