--- a/react/package.json
+++ b/react/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
+    "history": "4.7.2",
     "markdown": "^0.5.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
