--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "promise": "^8.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-textarea-autosize": "^6.0.0"
   },
   "license": "MIT",
   "devDependencies": {
