--- a/react/package.json
+++ b/react/package.json
@@ -17,12 +17,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
+    "jquery": "^3.3.1",
     "markdown": "^0.5.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.0.17",
+    "react-textarea-autosize": "^6.0.0",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
