Disable automatic copying of master database for PR-apps

--- a/app.json
+++ b/app.json
@@ -1,12 +1,9 @@
 {
   "name": "cv_master",
   "scripts": {
-     "postdeploy": "pg_dump $STAGING_DATABASE_URL | psql $DATABASE_URL && bundle exec rake db:migrate"
+     "postdeploy": "psql $DATABASE_URL -f SQL_table_creation.sql"
   },
   "env": {
-    "STAGING_DATABASE_URL": {
-      "required": true
-    },
     "CLIENT_URL": {
       "required": true
     }
