--- a/react/package.json
+++ b/react/package.json
@@ -17,13 +17,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
-    "jquery": "^3.3.1",
     "history": "4.7.2",
+    "jquery": "^3.3.1",
     "markdown": "^0.5.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.0.17",
     "react-textarea-autosize": "^6.0.0",
