--- a/react/package.json
+++ b/react/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.3",
+    "classnames": "^2.2.5",
     "history": "4.7.2",
     "jquery": "^3.3.1",
     "markdown": "^0.5.0",
