--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pg": "7.4.0",
     "promise": "^8.0.1",
     "react": "^16.2.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
