--- a/react/package.json
+++ b/react/package.json
@@ -23,6 +23,7 @@
     "markdown": "^0.5.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
